[package]
name = "toys"
version = "0.0.1"
author = "zero9501"
edition = "2021"
description = "It's like using a library of tools like a toy"
license = "Apache"

[features]
# 默认开启 strings-feature
default = ["strings","http"]
strings = []
http = []



# 依赖
[dependencies]
# Http工具库
reqwest = {version = "0.11.16", features = ["json","blocking"]}
# 异步运行时
tokio = {version = "1", features = ["full"]}
# 懒加载静态变量
lazy_static = "1.4.0"
# 时间日期库
chrono = {version = "0.4", features = ["serde"]}

###### 序列化相关依赖 ######
# 结构体序列化库,开启derive编译结构体上所标注的宏
serde = {version = "1", features = ["derive"]}
# Json
serde_json = "1"

# 开发环境配置
[profile.dev]
# 编译器对代码的优化级别0-3
opt-level = 0

# 生产环境配置
[profile.release]
opt-level = 3